# Django_Practice

./: .gitignore  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
