[project]
name = "djangototurialpollsapp"
version = "0.1.0"
description = "learning the basics of django"
authors = [
    {name = "David"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
